<resources>
    <string name="app_name">Android_Fragment_03</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text_home_fragment_01">Design Patterns</string>
    <string name="text_home_fragment_02">In software engineering, a design pattern is a general repeatable solution to a commonly occurring problem in software design. A design pattern isn\'t a finished design that can be transformed directly into code. It is a description or template for how to solve a problem that can be used in many different situations.</string>
    <string name="text_home_fragment_03">Uses of Design Patterns</string>
    <string name="text_home_fragment_04">Design patterns can speed up the development process by providing tested, proven development paradigms. Effective software design requires considering issues that may not become visible until later in the implementation. Reusing design patterns helps to prevent subtle issues that can cause major problems and improves code readability for coders and architects familiar with the patterns. Often, people only understand how to apply certain software design techniques to certain problems. These techniques are difficult to apply to a broader range of problems. Design patterns provide general solutions, documented in a format that doesn\'t require specifics tied to a particular problem. In addition, patterns allow developers to communicate using well-known, well understood names for software interactions. Common design patterns can be improved over time, making them more robust than ad-hoc designs.</string>
    <string name="btnCreational">Creational design patterns</string>
    <string name="btnStructural">Structural design patterns</string>
    <string name="btnBehavioral">Behavioral design patterns</string>
    <string name="tv_ListFragment">TEXT</string>
</resources>
