<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_home_fragment_01"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_home_fragment_02"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_home_fragment_03"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_home_fragment_04"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnCreational"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCreational" />

            <Button
                android:id="@+id/btnStructural"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnStructural" />

            <Button
                android:id="@+id/btnBehavioral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnBehavioral" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>